WASAPIAudioInputStream: Revert to the previous buffer size calculation.

This reverts part of a change landed last week for the case when
no audio conversion is needed in WASAPIAudioInputStream.
The reason for reverting is that a part of the WASAPIAudioInputStreamTestPacketSizes
test started failing, the part that uses 5ms buffer sizes.

For the case when conversion is needed and we have an imperfect
buffer size ratio, we add one more buffer as before.

BUG=694284
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2703253003
Cr-Commit-Position: refs/heads/master@{#451665}

Former-commit-id: c6e9b13174cd446b65b679bdfca1c8a8dc25ac1c